tests/baselines/reference/incrementAndDecrement.errors.txt
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(8,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(11,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(14,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(17,5): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(24,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(24,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(25,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(25,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(26,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(26,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(27,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(27,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(34,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(34,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(35,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(35,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(36,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(36,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(37,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(37,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(44,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(44,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(45,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(45,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(46,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(46,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(47,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(47,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(51,1): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(52,1): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(53,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(54,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(55,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(55,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(55,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(56,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(56,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(56,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(57,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(57,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(57,6): error TS1109: Expression expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(58,3): error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(58,4): error TS1005: ';' expected.
tests/cases/conformance/expressions/operators/incrementAndDecrement.ts(58,6): error TS1109: Expression expected.


==== tests/cases/conformance/expressions/operators/incrementAndDecrement.ts (44 errors) ====
    enum E { A, B, C };
    var x = 4;
    var e = E.B;
    var a: any;
    var w = window;
    
    // Assign to expression++
    x++ = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to expression--
    x-- = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to++expression
    ++x = 4; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Assign to--expression
    --x = 5; // Error
        ~
!!! error TS1005: ';' expected.
    
    // Pre and postfix++ on number
    x++;
    x--;
    ++x;
    --x;
    ++x++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --x--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++x--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --x++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    // Pre and postfix++ on enum
    e++;
    e--;
    ++e;
    --e;
    ++e++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --e--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++e--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --e++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    // Pre and postfix++ on value of type 'any'
    a++;
    a--;
    ++a;
    --a;
    ++a++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --a--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++a--; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --a++; // Error
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    
    // Pre and postfix++ on other types
    w++; // Error
    ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
    w--; // Error
    ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
    ++w; // Error
      ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
    --w; // Error
      ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
    ++w++; // Error
      ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --w--; // Error
      ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    ++w--; // Error
      ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    --w++; // Error
      ~
!!! error TS2356: An arithmetic operand must be of type 'any', 'number' or an enum type.
       ~~
!!! error TS1005: ';' expected.
         ~
!!! error TS1109: Expression expected.
    
    
    